# pop-booking

./: .gitignore  Cargo.toml  Dockerfile  README.md  VULNERABILITIES.md  book-convert.ipynb  bookings.db  bookings.json  bookings_modified.json  pop-booking.container
.github/workflows/: CICD.yml  rust.yml  test_build.yml
backend/: .env  .env.example  Cargo.toml  bookings.txt  build.rs
backend/src/: api.rs  authenticate.rs  booker.rs  frontend_build.rs  hourmin.rs  json_db.rs  lib.rs  main.rs
backend/tests/: snow_wasm_artifact.rs
config/: resource_periods.json  resources.json  resources.ron
db/: bookings.json
frontend/: index.html  mobile-calendar.css  mobile-calendar.js  mobile-pickers.css  mobile-pickers.js  multi-select.css  multi-select.js  script.js  style.css
frontend/snow-wasm/: Cargo.toml  README.md  build.sh
frontend/snow-wasm/pkg/: snow_sim.d.ts  snow_sim.js  snow_sim_bg.wasm  snow_sim_bg.wasm.d.ts
frontend/snow-wasm/src/: lib.rs  shaders.rs
