[package]
name = "backend"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/thomasconrad/pop-book"
readme = "../README.md"
keywords = ["rust", "pop-book", "backend"]
categories = ["web-programming", "network-programming"]
description = "Backend web server for pop-book a booking system for the POP dormitory"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.7.4", features = ["macros"]}
tokio = { version = "1.35.1" , features = ["macros","rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tower = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }