[package]
name = "backend"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/thomasconrad/pop-book"
readme = "../README.md"
keywords = ["rust", "pop-book", "backend"]
categories = ["web-programming", "network-programming"]
description = "Backend web server for pop-book a booking system for the POP dormitory"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.7.4", features = ["macros","json"]}
axum-extra = {version = "0.9", features = ["cookie"]}
tokio = { version = "1.35.1" , features = ["macros","rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["cors", "fs", "catch-panic", "compression-gzip", "timeout"] }
tower = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
rand = "0.8"
rand_hc = "0.3"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json","rustls-tls"] , default-features = false }
sha1 = "0.10"
anyhow = { version = "1.0", features = ["backtrace"] }
base64 = "0.22"
http-body-util = "0.1"
